# quadtree-image-compression

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  simple.cpp  temp.cpp
